2018-12-02  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (diff procedure): Tidy up this node.

2018-12-02  Jacob Bachmeyer  <jcb62281@gmail.com>

	* runtest.exp (hex): Remove useless test before setting.
	(decimal): Likewise.

2018-12-02  Jacob Bachmeyer  <jcb62281@gmail.com>

	* doc/dejagnu.texi (Invoking runtest): Document new --local_init
	and --global_init command line options.
	* doc/runtest.1: Likewise.

	* runtest.exp: Remove useless tests before setting default values
	for variables: all_flag, binpath, debug, options, outdir, reboot,
	tracelevel, verbose, log_dialog.  They are set before loading any
	files or parsing the command line.

	* runtest.exp: Add options --local_init and --global_init for
	selecting alternate testsuite configuration files.

	* runtest.exp: Split variable "configfile" into "local_init_file"
	and "global_init_file" in preparation for adding command-line
	options to specify these independently.

	* runtest.exp (load_generic_config): Remove configfile global.
	(load_board_description): Likewise.
	(load_base_board_description): Likewise.

2018-11-30  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (grep): Remove reference to "NULL" in comment.
	* testsuite/lib/util-defs.exp (util_start): Likewise.

2018-11-30  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: (verbose procedure): Improve documentation.
	(load_lib procedure): Likewise.

2018-11-30  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: More clean-ups of built-in proc documentation.

2018-11-30  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Use isremote.
	* lib/target.exp: Likewise.
	* lib/remote.exp: Likewise.
	* lib/libgloss.exp: Likewise.
	* config/unix.exp: Likewise.
	* config/sim.exp: Likewise.
	* config/gdb_stub.exp: Likewise.
	* config/gdb-comm.exp: Likewise.
	* baseboards/basic-sim.exp: Likewise.
	* baseboards/androideabi.exp: Likewise.

2018-11-30  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (isremote): New.