@@ -1,1 +1,3 @@
 dejagnu.info
+stamp-vti
+version.texi
