@@ -1,5 +1,12 @@
 2018-12-02  Ben Elliston  <bje@gnu.org>
 
+	* doc/dejagnu.texi: Add title page and frontmatter. Include
+	version.texi.
+	* Makefile.in: Regenerate.
+	* mdate-sh: Installed by automake --add-missing.
+
+2018-12-02  Ben Elliston  <bje@gnu.org>
+
 	* doc/dejagnu.texi (diff procedure): Tidy up this node.
 
 2018-12-02  Jacob Bachmeyer  <jcb62281@gmail.com>
